feat: add dashboard funnel widget
